--- a/drinmemo/templates/accounts/regist.html
+++ b/drinmemo/templates/accounts/regist.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content%}
-<form method+'POST'>
+<form method='POST'>
     {% csrf_token %}
     {{ regist_form.as_p }}
     <input type='submit' value='ユーザー登録'
