--- a/drinmemo/templates/base.html
+++ b/drinmemo/templates/base.html
@@ -1,13 +1,19 @@
-<!DOcTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
     <head>
         <meta charset="utf-8">
         <!-- bootstrap -->
-         <link href="<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">" 
+         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">" 
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="{% url 'accounts:home' %}">ホーム</a>
+            <div class='container'>
+                <a class="navbar-brand" href="{% url 'accounts:home' %}">ホーム</a>
+                {% if user.is_authenticated %}
+                {% else %}
+                    <a class='navbar-brand' href="{% url 'accounts:regist' %}">ユーザー登録</a>
+                {% endif %}
+            </div>
         </nav>
         {% block content %}{% endblock %}
     </body>
