--- a/drinmemo/templates/accounts/regist.html
+++ b/drinmemo/templates/accounts/regist.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
-{% block content%}
+{% block content %}
 <form method='POST'>
     {% csrf_token %}
     {{ regist_form.as_p }}
-    <input type='submit' value='ユーザー登録'
+    <input type='submit' value='ユーザー登録'>
 </form>
 {% endblock %}
