キーワード検索バーとページ移動作成

--- a/drinmemo/templates/base.html
+++ b/drinmemo/templates/base.html
@@ -21,6 +21,7 @@
             <a href="{% url 'accounts:home' %}">ホーム</a>
             <a href="{% url 'drink_app:list' %}">マイドリンク</a>
             <a href="#">好みの傾向</a>
+            <a href="#">アカウント設定</a>
         </footer>
 
     </body>
