--- a/drinmemo/templates/drink_app/drink_form.html
+++ b/drinmemo/templates/drink_app/drink_form.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>記録追加</h2>
+<h2>記録画面</h2>
 
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
